--- a/scss/_aboutus.scss
+++ b/scss/_aboutus.scss
@@ -1,44 +1,174 @@
 .about-us{
-    background-color: #E5E5E5;;
-   }
+ background-color: #E5E5E5;
+ width: 100%;
+ 
+
+//  @media screen and (min-width: 768px) {
+//  
+//  }
+
+//  @media screen and (min-width: 1280px) {
+//  
+//   }
+}
+
+.container{
+ max-width: 1280px;
+ margin-left: auto;
+ margin-right: auto;
+ padding-top: 84px;
+ padding-bottom: 84px;
+ padding-left: 15px;
+ padding-right: 15px;
+
+ @media screen and (min-width: 480px) {
+   width: 480px;
+ }
+
+ @media screen and (min-width: 768px) {
+   display: flex;
+   align-items: stretch;
+   justify-content: center;
+   width: 768px;
+   padding-top: 100px;
+   padding-bottom: 100px;
+ }
+
+ @media screen and (min-width: 1280px) {
+   width: 1280px;
+   padding-top: 130px;
+   padding-bottom: 130px;
+  }
+}
+
+.about-us-list{
+ list-style: none;
+ padding-left: 0;
    
-   .section-description{
-    font-family: $main-font-family;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 11px;
-    line-height: 1.36;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-    color: $forth-text-color;
-   }
+ @media screen and (max-width: 767px) {
+  display: none;
+ }
+
+ @media screen and (min-width: 768px) {
+  margin-right: 30px;   
+  margin-bottom: 0;
+  margin-top: 0;
+ }
+
+ @media screen and (min-width: 1280px) {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  margin-right: 64px;
+ }
+}
+
+.about-us-item{
+@media screen and (min-width: 1280px) {
+  margin-bottom: 0;
+ }   
+}
+
+.about-us-item:not(:last-child) {
+ @media screen and (min-width: 768px) {
+  margin-bottom: 30px;
+ } 
+
+ @media screen and (min-width: 1280px) {
+  margin-right: 30px;
+  } 
+}
+
+.aboutus-info{
+ position: relative;
+ 
+
+ @media screen and (min-width: 768px) {
+  width: 50%;
+ }
+}
+
+.section-description{
+ font-family: $main-font-family;
+ font-style: normal;
+ font-weight: 600;
+ font-size: 11px;
+ line-height: 1.36;
+ letter-spacing: 0.1em;
+ text-transform: uppercase;
+ color: $forth-text-color;
+ padding-left: 90px;
+}
+
+.section-description::before{
+ content: '';
+ position: absolute;
+ left: 5px;
+ top: 6px;
+ height: 1px;
+ width: 60px;
+ display: inline-block;
+ background-color: $forth-text-color;
+}
+ 
+ .section-title{
+ font-family: $secondary-font-family;
+ font-style: normal;
+ font-weight: 700;
+ font-size: 28px;
+ line-height: 1.17;
+ letter-spacing: 0.05em;
+ color: #303030;
+ margin-top: 20px;
+ }
+ 
+ .description-text{
+ font-family: $main-font-family;
+ font-style: normal;
+ font-weight: 400;
+ font-size: 16px;
+ line-height: 1.6;
+ letter-spacing: 0.02em;
+ color: $main-text-color;
+ margin-top: 20px;
+}
    
-   .section-title{
-   font-family: $secondary-font-family;
-   font-style: normal;
-   font-weight: 700;
-   font-size: 28px;
-   line-height: 1.17;
-   letter-spacing: 0.05em;
-   color: #303030;
-   }
-   
-   .description-text{
-    font-family: $main-font-family;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.6;
-    letter-spacing: 0.02em;
-    color: $main-text-color;
-   }
-   
-   .description-subtext{
-    font-family: $main-font-family;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: $main-text-color;
-   }
+.description-subtext{
+ font-family: $main-font-family;
+ font-style: normal;
+ font-weight: 400;
+ font-size: 14px;
+ line-height: 1.85;
+ letter-spacing: 0.02em;
+ color: $main-text-color;
+ margin-top: 20px;
+ margin-bottom: 40px;
+ width: 100%;
+}
+
+.button{
+ font-family: $main-font-family;
+ font-style: normal;
+ font-weight: 600;
+ font-size: 12px;
+ line-height: 1.33;
+ letter-spacing: 0.09em;
+ text-transform: uppercase;
+ color: $forth-text-color;
+ padding-top: 12px;
+ padding-left: 20px;
+ padding-bottom: 12px;
+ padding-right: 20px;
+ height: 160px;
+ width: 40px;
+ border: 1px solid #FF6C00;
+ box-sizing: border-box;
+ border-radius: 25px;
+
+}
+
+.button:hover,
+.button:focus{
+ color: $third-text-color;
+ background-color: $accent-color;
+}
