--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ a {
 }
 
 .container {
-  max-width: 1280px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 84px;
@@ -73,9 +73,9 @@ a {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .container {
-    width: 1280px;
+    width: 1200px;
     padding-top: 130px;
     padding-bottom: 130px;
   }
@@ -100,7 +100,7 @@ a {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .about-us-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -111,7 +111,7 @@ a {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .about-us-item {
     margin-bottom: 0;
   }
@@ -123,7 +123,7 @@ a {
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .about-us-item:not(:last-child) {
     margin-right: 30px;
   }
@@ -165,12 +165,19 @@ a {
 .section-title {
   font-family: "Raleway", sans-serif;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 900;
   font-size: 28px;
   line-height: 1.17;
   letter-spacing: 0.05em;
   color: #303030;
   margin-top: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section-title {
+    font-size: 42px;
+    line-height: 1.16;
+  }
 }
 
 .description-text {
@@ -184,6 +191,19 @@ a {
   margin-top: 20px;
 }
 
+@media screen and (min-width: 768px) {
+  .description-text {
+    font-weight: 700;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .description-text {
+    font-size: 18px;
+    line-height: 1.66;
+  }
+}
+
 .description-subtext {
   font-family: "Open Sans", sans-serif;
   font-style: normal;
@@ -193,11 +213,24 @@ a {
   letter-spacing: 0.02em;
   color: #555555;
   margin-top: 20px;
-  margin-bottom: 40px;
   width: 100%;
 }
 
+@media screen and (min-width: 768px) {
+  .description-subtext {
+    margin-top: 40px;
+    font-weight: 700;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .description-subtext {
+    margin-top: 20px;
+  }
+}
+
 .button {
+  display: block;
   font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 600;
@@ -205,17 +238,19 @@ a {
   line-height: 1.33;
   letter-spacing: 0.09em;
   text-transform: uppercase;
+  text-align: center;
   color: #303030;
   padding-top: 12px;
-  padding-left: 20px;
+  padding-left: 15px;
   padding-bottom: 12px;
   padding-right: 20px;
-  height: 160px;
-  width: 40px;
+  width: 160px;
+  height: 40px;
   border: 1px solid #FF6C00;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 25px;
+  margin-top: 40px;
 }
 
 .button:hover,
