--- a/scss/_aboutus.scss
+++ b/scss/_aboutus.scss
@@ -1,11 +1,10 @@
 .about-us{
  background-color: #E5E5E5;
  width: 100%;
- 
 }
 
 .container{
- max-width: 1280px;
+ max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 84px;
@@ -26,8 +25,8 @@
    padding-bottom: 100px;
  }
 
- @media screen and (min-width: 1280px) {
-   width: 1280px;
+ @media screen and (min-width: 1200px) {
+   width: 1200px;
    padding-top: 130px;
    padding-bottom: 130px;
   }
@@ -47,7 +46,7 @@
   margin-top: 0;
  }
 
- @media screen and (min-width: 1280px) {
+ @media screen and (min-width: 1200px) {
   display: flex;
   width: 50%;
   height: 100%;
@@ -56,7 +55,7 @@
 }
 
 .about-us-item{
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   margin-bottom: 0;
  }   
 }
@@ -66,7 +65,7 @@
   margin-bottom: 30px;
  } 
 
- @media screen and (min-width: 1280px) {
+ @media screen and (min-width: 1200px) {
   margin-right: 30px;
   } 
 }
@@ -106,12 +105,17 @@
  .section-title{
  font-family: $secondary-font-family;
  font-style: normal;
- font-weight: 700;
+ font-weight: 900;
  font-size: 28px;
  line-height: 1.17;
  letter-spacing: 0.05em;
  color: #303030;
  margin-top: 20px;
+
+ @media screen and (min-width: 1200px) {
+ font-size: 42px;
+ line-height: 1.16;
+  }
  }
  
  .description-text{
@@ -123,6 +127,15 @@
  letter-spacing: 0.02em;
  color: $main-text-color;
  margin-top: 20px;
+
+ @media screen and (min-width: 768px) {
+  font-weight: 700;
+ }
+ 
+ @media screen and (min-width: 1200px) {
+  font-size: 18px;
+  line-height: 1.66;
+ }
 }
    
 .description-subtext{
@@ -134,11 +147,18 @@
  letter-spacing: 0.02em;
  color: $main-text-color;
  margin-top: 20px;
- margin-bottom: 40px;
  width: 100%;
+ @media screen and (min-width: 768px) {
+   margin-top: 40px;
+   font-weight: 700;
+}
+   @media screen and (min-width: 1200px) {
+    margin-top: 20px;
+   }
 }
 
 .button{
+ display: block;
  font-family: $main-font-family;
  font-style: normal;
  font-weight: 600;
@@ -146,17 +166,18 @@
  line-height: 1.33;
  letter-spacing: 0.09em;
  text-transform: uppercase;
+ text-align: center;
  color: $forth-text-color;
  padding-top: 12px;
- padding-left: 20px;
+ padding-left: 15px;
  padding-bottom: 12px;
  padding-right: 20px;
- height: 160px;
- width: 40px;
+ width: 160px;
+ height: 40px;
  border: 1px solid #FF6C00;
  box-sizing: border-box;
  border-radius: 25px;
-
+ margin-top: 40px;
 }
 
 .button:hover,
